Fixing banner z-index.

--- a/assets/src/scss/components/complex/_banner.scss
+++ b/assets/src/scss/components/complex/_banner.scss
@@ -35,7 +35,7 @@
   background-color: var(--color-xmas-alpha);
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 2;
   text-align: center;
 
   p,
